2.2.0 (13-12-2023)
- Improvement: Adds fenixedu OSS DM [#qubIT-Omnis-4736]

2.1.2 (05-07-2023)
- Bug fix: Correctly handling SSL termination

2.1.1 (03-03-2022)
- Bug fix: Remove RC module version dependency

2.1.0 (09-03-2020)
- Support for Java 11